# zaid

./: README.md  game.py  high_scores.json  main.py  pyproject.toml  zaid.py  zaid.spec
.github/workflows/: deploy.yml
